--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://embed.twitch.tv/embed/v1.js"></script>
     <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
-    <title>React App</title>
+    <title>freeicecream.network</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
